k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/url-shortener-backend:latest
        ports:
        - containerPort: 9808
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 9808
    targetPort: 9808
  type: ClusterIP
